--- a/site/index.html
+++ b/site/index.html
@@ -10,5 +10,6 @@
     <h1>Test Hack for LA</h1>
     <p>testing...</p>
     <p>More tests</p>
+    <p>Third test's the charm</p>
   </body>
 </html>
